# shimbas_hax

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  install-test.yml  publish.yml
docs/: index.rst
shimbas_hax/: __init__.py  cli.py  core.py  exceptions.py
tests/: test_core.py
